--- a/gmp/gallery.html
+++ b/gmp/gallery.html
@@ -4,10 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>個人サイト向け 無料ホームページテンプレート tp_simple16</title>
+
+
+	<title>焼肉系FPSチームGMPへようこそ</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ここにサイト説明を入れます">
-	<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+	<meta name="description" content="焼肉系FPSチームGMPのHPです">
+	<meta name="keywords" content="焼肉,APEX">
+	
+	
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/fixmenu_pagetop.js"></script>
 	<script src="js/openclose.js"></script>
@@ -56,11 +60,11 @@
 				</figure>
 
 				<div id="thumbnail-box">
-					<img src="images/sample1_big.jpg" alt="画像１の説明文をここに入れます" class="thumbnail">
-					<img src="images/sample2.jpg" alt="画像２の説明文をここに入れます" class="thumbnail">
-					<img src="images/sample3.jpg" alt="画像３の説明文をここに入れます" class="thumbnail">
-					<img src="images/sample4.jpg" alt="画像４の説明文をここに入れます" class="thumbnail">
-					<img src="images/sample5.jpg" alt="画像５の説明文をここに入れます" class="thumbnail">
+					<img src="images/sample1_big.jpg" alt="ちゃんぽんの画像"" class="thumbnail">
+					<img src="images/sample2.jpg" alt="ちゃんぽんの画像" class="thumbnail">
+					<img src="images/sample3.jpg" alt="ちゃんぽんの画像" class="thumbnail">
+					<img src="images/sample4.jpg" alt="焼肉の画像" class="thumbnail">
+					<img src="images/sample5.jpg" alt="似顔絵" class="thumbnail">
 				</div>
 
 				<h3>イメージチェンジプログラム（imgchg_pack.js）の使い方</h3>
