--- a/gmp/index.html
+++ b/gmp/index.html
@@ -4,10 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+
 	<title>焼肉系FPSチームGMPへようこそ</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ここにサイト説明を入れます">
-	<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+	<meta name="description" content="焼肉系FPSチームGMPのHPです">
+	<meta name="keywords" content="焼肉,APEX">
+	
+	
 	<link rel="stylesheet" href="css/style.css">
 	<script src="js/fixmenu_pagetop.js"></script>
 	<script src="js/openclose.js"></script>
@@ -53,13 +57,13 @@
 					<dt>2020/08/12</dt>
 					<dd>サイト始めました<span class="newicon">NEW</span></dd>
 					<dt>2020/08/12</dt>
-					<dd>更新したくねえぇ</dd>
+					<dd>aaaa</dd>
 				</dl>
 			</section>
 
 			<section class="inner">
 
-				<h2>テンプレートのご利用前に必ずお読み下さい</h2>
+				<h2>テンプレート</h2>
 
 				<h3>利用規約のご案内</h3>
 				<p>このテンプレートは、<a href="https://template-party.com/">Template Party</a>にて無料配布している『個人サイト向け 無料ホームページテンプレート
