--- a/gmp/link.html
+++ b/gmp/link.html
@@ -4,10 +4,14 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>個人サイト向け 無料ホームページテンプレート tp_simple16</title>
+
+
+	<title>焼肉系FPSチームGMPへようこそ</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="ここにサイト説明を入れます">
-	<meta name="keywords" content="キーワード１,キーワード２,キーワード３,キーワード４,キーワード５">
+	<meta name="description" content="焼肉系FPSチームGMPのHPです">
+	<meta name="keywords" content="焼肉,APEX">
+	
+	
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/style-opening.css">
 	<script src="js/fixmenu_pagetop.js"></script>
